--- a/HCore-Cache/HCore-Cache.csproj
+++ b/HCore-Cache/HCore-Cache.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
     <PackageReference Include="MessagePack" Version="2.5.129" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="VIEApps.Enyim.Caching" Version="1.8.2012.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.2.32">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
