--- a/HCore-Tenants/HCore-Tenants.csproj
+++ b/HCore-Tenants/HCore-Tenants.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,5 +19,9 @@
     <ProjectReference Include="..\HCore-Directory\HCore-Directory.csproj" />
     <ProjectReference Include="..\HCore-Storage\HCore-Storage.csproj" />
     <ProjectReference Include="..\HCore-Web\HCore-Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <InternalsVisibleTo Include="MessagePack.Resolvers.DynamicUnionResolver" />
   </ItemGroup>
 </Project>
