--- a/HCore-Database/HCore-Database.csproj
+++ b/HCore-Database/HCore-Database.csproj
@@ -15,6 +15,7 @@
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="Npgsql" Version="8.0.2" />
 	<PackageReference Include="Npgsql.DependencyInjection" Version="8.0.1" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
