--- a/HCore-Tenants/HCore-Tenants.csproj
+++ b/HCore-Tenants/HCore-Tenants.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
 	<PackageReference Include="MessagePack" Version="2.5.140" />
-	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.9.28">
+	<PackageReference Include="ExCSS" Version="4.2.5" />
+	<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.9.28">    
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
